replied to Lucians comments SSCS-10293